# iu5

./: README.md
oad/lab1/: 1.bpmn  2.bpmn
oad/lab2/: Лаба2.pbix  Справочники.xlsx
oad/lab3/: app.qvf
term #1/Programming/: README.md
term #1/Programming/homework/: header.h  source.cpp
term #1/Programming/informatics-test/: readme.md
term #1/Programming/lab02/: main.cpp
term #1/Programming/lab03/: 2.cpp  3.cpp  readme.md
term #1/Programming/lab04/: header.h  main.cpp
term #1/Programming/lab05/: 5 otchet.odt  main.cpp
term #1/Programming/lab06/: otchet #6.odt  table_print.cpp  table_print.h
term #1/Programming/lab07/: source.cpp
term #1/Programming/lab08/: main.cpp  otchet #8.odt
term #1/Programming/lab09/: lab9.sln  main.cpp  rept #9.odt
term #1/Programming/lab10/: func.cpp  rept #10.odt  source.cpp
term #1/Programming/practice/: source.cpp
term #2/Programming/: README.md
term #2/Programming/lab1/string/: CMakeLists.txt  string.cpp
term #2/Programming/lab2/: README.md  main.cpp
term #2/Programming/lab3/: CMakeLists.txt  README.md  main.cpp
term #2/Programming/lab4/: CMakeLists.txt  main.cpp
term #2/Programming/lab5/: README.md
term #2/Programming/lab6/: README.md
term #2/Programming/lab7/: main.cpp
term #2/Programming/lab7/Ships/: CMakeLists.txt  Ship.h  Steamer.h
term #2/Programming/lab8/: CMakeLists.txt
term #2/Programming/lab9/: README.md  main.cpp
term-1/Programming/homework/: main.cpp
term-1/Programming/lab03/: 1.cpp  4.cpp
term-1/Programming/lab04/: 4 otchet.odt  source.cpp
term-1/Programming/lab05/: readme.md
term-1/Programming/lab06/: integral_methods.cpp  integral_methods.h  main.cpp  readme.md
term-1/Programming/lab07/: input.txt  keys.txt  lab #7.odt  main.cpp  readme.md
term-1/Programming/lab08/: header.h  source.cpp
term-1/Programming/lab09/: dict.cpp  dict.h  dict.txt  lab9.vcxproj  lab9.vcxproj.filters
term-1/Programming/lab10/: header.h  main.cpp
term-1/Programming/practice/: header.h  main.cpp
term-2/pksh/: README.md
term-2/pksh/lab1/: CMakeLists.txt  (+2 more)
term-2/pksh/lab2/: CMakeLists.txt
term-2/pksh/lab2/planet/: funcs.cpp  funcs.h  planet.cpp  planet.h
term-2/pksh/lab2/struct2class/: Man.cpp  main.cpp
term-2/pksh/lab4/MyStack/: CMakeLists.txt  MyStack.h
term-2/pksh/lab6/Polynomial/: CMakeLists.txt  Polynomial.cpp  Term.cpp  Term.h
term-2/pksh/lab9/Solutions/: CMakeLists.txt  FirstPart.cpp  Task5.h  Task6.cpp  Task6.h  Task7.h  Task8.cpp  Task8.h
term-3/eltech/: ИУ5-35Б Расулов Лаб.3.docx
term-3/md/: Расулов ИУ5-35Б Отчет по практике .docx
term-4/network-apps-programming/: README.md
term-5/net/: net-homework.py
term-6/life-cycle-of-asoiu/: rk2.py
term-6/net/: 1.pkt  2.pkt  3.pkt  4.pkt
tu/lab1/: first_graph.m  ode_1.m  ode_sin.m  second_graph.m  third_graph.m  Расулов А.Н. ИУ5-55Б Лаб.1.docx
vsasoiu/: 1.emc
vsasoiu/lab1/: L1.ewb  Л1 ч 2.ewb
vsasoiu/lab2/: 2.ewb
vsasoiu/lab3/: lab3_4.emc  lab3_5.emc
vsasoiu/lab4/: 3 laba - 13 var
(+118 files in other folders)
